--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "laravel-elixir": "^4.2.1"
   },
   "dependencies": {
-    "laravel-elixir": "^4.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "bootstrap-sass": "^3.0.0",
+    "jquery": "^3.2.1",
+    "laravel-elixir": "^4.0.0"
   }
 }
